// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds a package manifest 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "deviceApi": "10.1.0",
  },
  "sourceMaps": Object {
    "device": Object {
      "hera": "sourceMaps/device/hera/index.js.json",
    },
  },
}
`;

exports[`builds a package manifest with a companion 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "companion": Object {
      "filename": "companion.zip",
    },
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "companionApi": "3.5.0",
    "deviceApi": "10.1.0",
  },
  "sourceMaps": Object {
    "companion": "sourceMaps/companion/companion.js.json",
    "device": Object {
      "hera": "sourceMaps/device/hera/index.js.json",
    },
    "settings": "sourceMaps/settings/settings.js.json",
  },
}
`;

exports[`builds a package manifest with a native device component 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sourceMaps": Object {},
}
`;

exports[`builds a package manifest with a native device component and companion 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "companion": Object {
      "filename": "companion.zip",
    },
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "companionApi": "3.5.0",
  },
  "sourceMaps": Object {
    "companion": "sourceMaps/companion/companion.js.json",
    "settings": "sourceMaps/settings/settings.js.json",
  },
}
`;

exports[`builds a package manifest with multiple device components 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
      "rhea": Object {
        "filename": "device-rhea.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "deviceApi": "10.1.0",
  },
  "sourceMaps": Object {
    "device": Object {
      "hera": "sourceMaps/device/hera/index.js.json",
      "rhea": "sourceMaps/device/rhea/index.js.json",
    },
  },
}
`;

exports[`builds a package manifest with supported capabilities 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
      "rhea": Object {
        "filename": "device-rhea.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "deviceApi": "*",
  },
  "sourceMaps": Object {
    "device": Object {
      "hera": "sourceMaps/device/hera/index.js.json",
      "rhea": "sourceMaps/device/rhea/index.js.json",
    },
  },
}
`;

exports[`builds a package with tiles component 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "tiles": Array [
      Object {
        "id": "b4ae822e-eca9-4fcb-8747-217f2a1f53a2",
        "name": "Tile1",
        "platforms": Array [
          "hera",
          "rhea",
        ],
      },
      Object {
        "id": "b4ae822e-eca9-4fcb-8747-217f2a1f53a3",
        "name": "Tile2",
        "platforms": Array [
          "hera",
        ],
      },
    ],
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
      },
      "rhea": Object {
        "filename": "device-rhea.zip",
        "platform": Array [
          "128.1.1+",
        ],
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sourceMaps": Object {},
}
`;

exports[`doesn't include tile data if app type is not APP 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sourceMaps": Object {},
}
`;

exports[`emits an error if a component bundle tag has a device type but invalid platform 1`] = `"Unknown bundle component tag: Invalid value \\"1.1.1+\\" supplied to : (({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>) | { type: \\"companion\\" })/0: ({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>)/0: { type: \\"device\\", family: string, platform: Array<string> }/platform: Array<string>"`;

exports[`emits an error if a component bundle tag has a device type but missing family 1`] = `"Unknown bundle component tag: Invalid value undefined supplied to : (({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>) | { type: \\"companion\\" })/0: ({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>)/0: { type: \\"device\\", family: string, platform: Array<string> }/family: string"`;

exports[`emits an error if a component bundle tag has a device type but missing platform 1`] = `"Unknown bundle component tag: Invalid value undefined supplied to : (({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>) | { type: \\"companion\\" })/0: ({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>)/0: { type: \\"device\\", family: string, platform: Array<string> }/platform: Array<string>"`;

exports[`emits an error if a component bundle tag has an invalid type field 1`] = `"Unknown bundle component tag: Invalid value {\\"type\\":\\"__invalid__\\"} supplied to : (({ type: \\"device\\", family: string, platform: Array<string> } & Partial<{ isNative: true }>) | { type: \\"companion\\" })"`;

exports[`emits an error if both JS and native device components are present 1`] = `"Cannot bundle mixed native/JS device components"`;

exports[`emits an error if multiple companion bundles are present for the same device family 1`] = `"Duplicate companion component bundles: bundle1.zip / bundle0.zip"`;

exports[`emits an error if multiple device bundles are present for the same device family 1`] = `"Duplicate device/hera component bundles: bundle1.zip / bundle0.zip"`;

exports[`includes tiles just for native apps 1`] = `
Object {
  "appId": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "buildId": "0x0f75775f470c1585",
  "components": Object {
    "watch": Object {
      "hera": Object {
        "filename": "device-hera.zip",
        "platform": Array [
          "128.1.1+",
        ],
        "supports": Object {
          "screenSize": Object {
            "h": 336,
            "w": 336,
          },
        },
      },
    },
  },
  "manifestVersion": 6,
  "requestedPermissions": Array [],
  "sdkVersion": Object {
    "deviceApi": "10.1.0",
  },
  "sourceMaps": Object {
    "device": Object {
      "hera": "sourceMaps/device/hera/index.js.json",
    },
  },
}
`;
